Fix labels align

--- a/app/assets/stylesheets/generic/common.scss
+++ b/app/assets/stylesheets/generic/common.scss
@@ -183,3 +183,7 @@ ul.breadcrumb {
   color: #b0b0b0;
 }
 
+.label {
+  margin-right: 5px;
+  font-weight: normal;
+}
