--- a/app/assets/stylesheets/sections/builds.scss
+++ b/app/assets/stylesheets/sections/builds.scss
@@ -46,21 +46,9 @@ pre.trace {
   .title {
     margin-top: 0;
     color: #666;
-    text-shadow: 0 1px 1px #FFF;
     line-height: 1.5;
   }
   .attr-name {
     color: #777;
-  }
-}
-
-.build-head h4 {
-  line-height: 1.5;
-
-  .label {
-    padding: 4px 9px;
-    position: relative;
-    top: -2px;
-    left: 4px;
   }
 }
